GNOME Bugzilla – Bug 640825
GStreamer Error: not-negotiated, missing codec mapping
Last modified: 2011-02-15 08:31:39 UTC
at the time of going to play the movie using totem movie player, I get an error message like this : Internal GStreamer error: negotiation problem
I want to know some more detailed information. 1. which command did you use to play the movie with totem? or just double-click the movie file? 2. can you provide the movie file?
(In reply to comment #1) > I want to know some more detailed information. > 1. which command did you use to play the movie with totem? or just > double-click the movie file? > > 2. can you provide the movie file? yes, I just double-click when it will play movies and error message appears. And the extensions my movie .avi btw, I use Debian Squeeze and when I try to use Ubuntu 10.4 there is no error message... :( Thank's for your reply Rgrd's darm
Could you do the following: start totem from the command line like this: $ GST_DEBUG=*:5 totem /path/to/your/movie.avi 2>dbg.log ... reproduce error, then quit totem... $ gzip dbg.log and attach the dbg.log.gz file to this bug report? --- Also, what's the output of: $ apt-cache policy gstreamer0.10-ffmpeg libavcodec52 ?
Created attachment 179703 [details] log of Gstreamer error
(In reply to comment #3) > Could you do the following: start totem from the command line like this: > > $ GST_DEBUG=*:5 totem /path/to/your/movie.avi 2>dbg.log > ... reproduce error, then quit totem... > $ gzip dbg.log > > and attach the dbg.log.gz file to this bug report? > > --- Ok ! i'll attach the log > Also, what's the output of: > > $ apt-cache policy gstreamer0.10-ffmpeg libavcodec52 > > ? And my output is : $ apt-cache policy gstreamer0.10-ffmpeg libavcodec52 libavcodec52: Installed: 5:0.6.1+svn20101128-0.1 Candidate: 5:0.6.1+svn20101128-0.1 Version table: *** 5:0.6.1+svn20101128-0.1 0 500 http://www.debian-multimedia.org/ squeeze/main i386 Packages 100 /var/lib/dpkg/status 4:0.5.2-6 0 500 http://ftp.us.debian.org/debian/ squeeze/main i386 Packages 500 http://kebo.vlsm.org/debian/ squeeze/main i386 Packages gstreamer0.10-ffmpeg: Installed: 0.10.10-1 Candidate: 0.10.10-1 Version table: *** 0.10.10-1 0 500 http://ftp.us.debian.org/debian/ squeeze/main i386 Packages 500 http://kebo.vlsm.org/debian/ squeeze/main i386 Packages 100 /var/lib/dpkg/status
Extract from the log: ============================================= 0:00:01.787981702 5991 0xb3502240 INFO GST_ERROR_SYSTEM gstelement.c:1784:gst_element_message_full:<ffdec_msvideo10> posted error message: Internal GStreamer error: negotiation problem. Please file a bug at http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer. 0:00:01.787993436 5991 0x8b670a0 ERROR totem bacon-video-widget-gst-0.10.c:403:bvw_error_msg: debug = gstffmpegdec.c(1267): gst_ffmpegdec_negotiate (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin0/GstDecodeBin2:decodebin20/ffdec_msvideo1:ffdec_msvideo10: could not find caps for codec (msvideo1), unknown type ============================================= This is a debian packaging issue. You are using a gstreamer0.10-ffmpeg package from debian main in combination with a much newer/different libavcodec version from a non-debian repository than the one the gstreamer0.10-ffmpeg package was built against. Installing the (newer) gstreamer0.10-ffmpeg package from experimental might make things work properly. Alternatively, downgrade libavcodec to the one in debian/main. I'll try to improve the error message a bit: commit 8d40c6357d024c0a54262429ff688756049b0135 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Mon Jan 31 23:28:33 2011 +0000 ffmpegdec: improve error message when set_caps is called but we have no mapping This may happen e.g. if gst-ffmpeg is compiled against an external libavcodec and the external lib is upgraded. See e.g. https://bugzilla.gnome.org/show_bug.cgi?id=640825
*** Bug 642247 has been marked as a duplicate of this bug. ***
Ok, I will try and to update the package on my debian box... :D btw, thanks for your help Mr. Philipp ;) Rgrd's darm